--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "type": "module",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start": "npm run compile && node ./dist/index.js",
+    "start-books-grpc": "npm run compile && node ./dist/books-grpc-server.js"
   },
   "keywords": [],
   "author": "Steve Ognibene",
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.3.1",
+    "@grpc/grpc-js": "^1.8.5",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
